--- a/public/style/components/header.css
+++ b/public/style/components/header.css
@@ -1,5 +1,7 @@
 .header{
-    background-color: #fff;
+    /* position: fixed; */
+    width: 100%;
+    background-color: #1199C4;
     padding: .4rem;
     overflow: hidden;
     height: 3.2rem;
@@ -7,7 +9,7 @@
 }
 
 .header-logo{
-    color: #1e90ff;
+    color: #DCF2F8;
     font-size: 1.4rem;
     text-align: left;
 }
@@ -19,12 +21,3 @@
     padding-left: .3rem;
 }
 
-.ant-menu{
-    line-height: 2.8rem;
-}
-
-.ant-menu-item{
-    font-size: 1rem !important;
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
